--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -5,6 +5,6 @@
 <!-- <div class="divider"></div> -->
 <footer class="footer footer-center p-4 bg-inherit text-base-content mt-auto">
   <aside>
-    <p>Copyright © 2023 Downing College JCR</p>
+    <p>Copyright © 2023 Lucas Ng</p>
   </aside>
 </footer>
