--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,33 +1,62 @@
 ---
+import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
-import EventsAccordion from "../components/EventsAccordion.astro";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
+import EventsTimeline from "../components/EventsTimeline.astro";
+import LandingImage from "../components/LandingImage.astro";
+import sigtechLogo from "../assets/sigtechLogo.svg";
+import LandingButton from "../components/LandingButton.svelte";
 ---
 
 <Layout title="Austyn Mair society">
-  <Navbar />
-  <main
-    class="mx-auto p-4 max-w-screen-md text-white text-base leading-relaxed flex flex-col min-h-screen"
-  >
-    <h1
-      class="text-4xl font-bold leading-tight text-center mb-4 text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"
-    >
-      Austyn Mair society
-    </h1>
-    <div class="flex justify-center">
-      <p class="prose text-center align-center">
-        Welcome to Downing College's engineering society! Here you can find
-        upcoming events, sponsors, study resources and more.
-      </p>
+  <main class="fixed top-0 left-0 mx-auto min-h-screen p-0 text-base leading-relaxed text-white">
+    <!-- <LandingImage /> -->
+    <div class="grid h-screen w-screen grid-cols-1 grid-rows-3">
+      <div><Navbar class="sticky top-0 left-0" /></div>
+      <div class="flex items-center justify-center">
+        <div class="text-center font-landing">
+          <h1 class="text-8xl font-bold">Austyn Mair society</h1>
+          <br />
+          <a href="/events"><button class="btn btn-primary"><p class="font-landing font-medium text-white">EVENTS</p></button></a>
+        </div>
+      </div>
+      <div class="grid grid-cols-1 grid-rows-4">
+        <div></div>
+        <div></div><div class="flex items-end justify-center">
+          <div class="text-center font-landing">
+            <h1 class="text-2xl font-light"><i>Sponsored by</i></h1>
+          </div>
+        </div>
+        <div class="flex items-start justify-center">
+          <a
+            href="https://sigtech.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><Image src={sigtechLogo} alt="SigTech logo" height="30" /></a
+          >
+        </div>
+      </div>
     </div>
-    <h2
-      class="text-2xl font-bold leading-tight text-left mb-0 mt-10 text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"
-    >
-      Upcoming events
-    </h2>
-    <div class="divider"></div>
-    <EventsAccordion />
+
+    <!-- <div class="mb-auto flex pt-12">
+      <div class="basis-1/12"></div>
+      <div
+        class="mb-auto basis-auto bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text font-landing text-transparent text-white"
+      >
+        <h1>
+          Austyn Mair society
+        </h1>
+        <div class="basis-6/12"></div>
+      </div>
+    </div> -->
+    <!-- <div class="flex">
+      <div class="basis-5/12"></div>
+      <div class="basis-5/12">
+        <EventsTimeline />
+      </div>
+      <div class="basis-2/12"></div>
+    </div> -->
+    <!-- <Footer /> -->
   </main>
-  <Footer />
 </Layout>
